[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quport"
version = "0.1.1"
description = "Research-grade multi-QPU mapping, routing, and benchmarking toolkit for NISQ circuit partitioning in Qiskit."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "Soumyadip Sarkar"}]
dependencies = [
  "qiskit>=2.0.0",
  "numpy>=1.23",
  "typer>=0.12",
  "rich>=13.7",
]

[project.optional-dependencies]
viz = ["pandas>=2.0", "matplotlib>=3.7", "tqdm>=4.66"]
yaml = ["pyyaml>=6.0"]
graph = ["networkx>=3.2"]

[project.scripts]
quport = "quport.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
ignore_missing_imports = true
no_site_packages = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
